--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,8 +1,6 @@
 name: "Torii-HDL Tests"
 on:
-  push:
-    branches:
-      - 'main'
+  push: {}
   pull_request: {}
 
 jobs:
@@ -42,8 +40,52 @@ jobs:
         run: |
           python -m pip install --user --upgrade pip setuptools wheel setuptools_scm nox
 
-
       - name: Run Tests
         shell: bash
         run: |
           nox -s test -- --coverage --codecov
+  torii-asic:
+    runs-on: ubuntu-latest
+    env:
+      OPENLANE_TAG: 2023.01.31
+      OPENLANE_IMAGE_NAME: efabless/openlane:$(OPENLANE_TAG)
+      OPENLANE_ROOT: /home/runner/openlane
+      PDK_ROOT: /home/runner/pdk
+    steps:
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Initialize Env
+        shell: bash
+        env:
+          WORKSPACE: ${{ github.workspace }}
+        run: |
+          echo "$HOME/.local/bin:$PATH" >> $GITHUB_PATH
+          echo "GITHUB_WORKSPACE=\"`pwd`\"" >> $GITHUB_ENV
+
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Setup OSS CAD Suite
+        uses: YosysHQ/setup-oss-cad-suite@v2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup
+        shell: bash
+        run: |
+          python -m pip install --user --upgrade pip setuptools wheel setuptools_scm nox volare
+
+      - name: Setup PDK
+        shell: bash
+        run: |
+          volare enable --pdk sky130 e884c4dcbf65101721529572ab6584f254e4f551
+
+      - name: Run ASIC Tests
+        shell: bash
+        run: |
+          nox -s test -- --asic --coverage --codecov
