--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -52,6 +52,8 @@ jobs:
       OPENLANE_ROOT: /home/runner/openlane
       PDK_ROOT: /home/runner/pdk
       PDK_TAG: e884c4dcbf65101721529572ab6584f254e4f551
+      TORII_OPENLANE_ROOT: $(OPENLANE_ROOT)
+      TORII_PDK_ROOT: $(PDK_ROOT)
     steps:
       - name: Setup Python
         uses: actions/setup-python@v4
