--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -83,6 +83,14 @@ jobs:
         run: |
           python -m pip install --user --upgrade pip setuptools wheel setuptools_scm nox volare
 
+      - name: Checkout OpenLANE
+        uses: actions/checkout@v3
+        with:
+          repository: 'The-OpenROAD-Project/OpenLane'
+          ref: '2023.01.31'
+          path: 'openlane'
+          fetch-depth: 1
+
       - name: Setup PDK
         shell: bash
         run: |
