ci: Possibly fixed the OpenLane directory getting cloned in the wrong location

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -88,7 +88,7 @@ jobs:
         with:
           repository: 'The-OpenROAD-Project/OpenLane'
           ref: '2023.01.31'
-          path: 'openlane'
+          path: '../../../openlane'
           fetch-depth: 1
 
       - name: Setup PDK / OpenLane
